# CedarLogic

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: deploy.yml  release.yml
docs/: Building.md  appcast.xml
include/: version.h
include/gui/: CircuitParse.h  GUICanvas.h  GUICircuit.h  LibraryParse.h  MainApp.h  MainFrame.h  NativeIcons.h  OscopeCanvas.h  OscopeFrame.h  PaletteFrame.h  QuickAddDialog.h  SettingsDialog.h  SparkleUpdater.h  WinSparkleUpdater.h  gateImage.h  glToImage.h  gl_wrapper.h  guiGate.h  guiWire.h  svgExport.h
include/gui/command/: cmdAddTab.h  cmdDeleteTab.h
logic/: CMakeLists.txt
logic/include/: logic_defaults.h  logic_gate.h
logic/src/: logic_circuit.cpp  logic_gate.cpp
res/: KLS_Logic.htb  cl_gatedefs.xml
res/help/: About.htm  Adding_Gates_To_A_Circuit.htm  Adding_Text.htm  Advanced_Navigation.htm  Compare.htm  Connecting_Gates.htm  Copy.htm  Copying_Pasting.htm  Disconnecting_Gates.htm  Exit.htm  Export_Bitmap.htm  Final_Project.htm  Full_Adder.htm  How_To_Have_A_Personal_Relationship_With_God.htm  Introduction.htm  Junction_Node.htm  KLS_Logic.hhc  KLS_Logic.hhk  KLS_Logic.hhp  MS_Help.css  Manipulating_Selections_Of_Gates_Wires.htm  New.htm  Open.htm  Oscope.htm  Oscope_Mode.htm  Paging.htm  Paste.htm  Pause_Simulation.htm  Print.htm  Print_Preview.htm  Printing_Exporting_A_Circuit.htm  RAM.htm  ROM.htm  Redo.htm  Register.htm  Review.htm  Save.htm  Save_As.htm  Saving_Opening_A_Circuit.htm  Selecting_Gates_Wires.htm  (+13 more)
res/macos/: CedarLogic.icns  Info.plist.in
scripts/: update-appcast.sh
simulator/: circuit.hpp
src/: version.cpp
src/gui/: CircuitParse.cpp  GUICanvas.cpp  GUICircuit.cpp  LibraryParse.cpp  MainApp.cpp  MainFrame.cpp  NativeIcons.mm  OscopeCanvas.cpp  OscopeFrame.cpp  PaletteFrame.cpp  QuickAddDialog.cpp  SettingsDialog.cpp  SparkleUpdater.mm  WinSparkleUpdater.cpp  gateImage.cpp  glToImage.cpp  guiGate.cpp  guiWire.cpp  klsClipboard.cpp  klsGLCanvas.cpp  klsMiniMap.cpp  paramDialog.cpp  svgExport.cpp  threadLogic.cpp
src/gui/GLFont/: glfont2.cpp
src/gui/command/: cmdAddTab.cpp  cmdDeleteGate.cpp  cmdDeleteTab.cpp
wasm/: CMakeLists.txt  README.md  bindings.cpp  build.sh  cedarlogic.d.ts  package.json  test.html  test_all_gates.mjs
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/public/: cedarlogic.wasm
web/scripts/: parse-gate-defs.ts
web/src/client/: App.tsx  main.tsx
web/src/client/components/: Canvas.tsx  CircuitCard.tsx  CircuitCardGrid.tsx  CircuitThumbnail.tsx  EditorPage.tsx  FilesPage.tsx  FilesToolbar.tsx  FloatingToolbar.tsx  GatePreview.tsx  GatePropertiesDialog.tsx  LoginPage.tsx  PageTabBar.tsx  QuickAddDialog.tsx  RamEditorDialog.tsx  ShareDialog.tsx  Toolbar.tsx
web/src/client/components/canvas/: CursorLayer.tsx  GateLayer.tsx  GridLayer.tsx  OverlayLayer.tsx  WireLayer.tsx
web/src/client/hooks/: useAuth.ts  useCanvasColors.ts  useCollab.ts  usePresence.ts  useRoute.ts  useSimulation.ts
web/src/client/lib/: cdl-export.ts  cdl-import.ts
web/src/client/lib/canvas/: gate-defs.json  gate-renderer.ts  spring.ts  wire-model.ts
web/src/client/lib/collab/: awareness.ts  cursor-ws.ts  provider.ts  yjs-schema.ts  yjs-to-worker.ts
web/src/client/lib/worker/: protocol.ts  simulation.worker.ts
web/src/client/stores/: canvas-store.ts  panel-store.ts  simulation-store.ts  theme-store.ts
web/src/server/: index.ts
web/src/server/collab/: hocuspocus.ts
web/src/server/cursor/: protocol.ts  worker.ts
web/src/server/db/: index.ts
web/src/server/db/migrations/: 001_initial.sql  002_files.sql
web/src/server/db/queries/: files.ts  users.ts
web/src/server/middleware/: auth.ts
web/src/server/routes/: auth.ts  files.ts
web/src/shared/: constants.ts  theme-colors.ts  types.ts  wire-types.ts
